// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stripe Payment Method CRUD tests Stripe Card CRUD should list, create, update and delete Stripe cards: card1 1`] = `
Object {
  "brand": "visa",
  "country": "US",
  "exp_month": 12,
  "exp_year": 2025,
  "fingerprint": null,
  "funding": "credit",
  "id": "test_payment_method_id",
  "last4": "4242",
  "name": "Test Card #1",
  "three_d_secure": null,
}
`;

exports[`Stripe Payment Method CRUD tests Stripe Card CRUD should list, create, update and delete Stripe cards: card2 1`] = `
Object {
  "brand": "visa",
  "country": "US",
  "exp_month": 12,
  "exp_year": 2025,
  "fingerprint": null,
  "funding": "credit",
  "id": "test_payment_method_id",
  "last4": "4242",
  "name": "Test Card #2",
  "three_d_secure": null,
}
`;
